Add Jupyter notebooks for cybersecurity, databases, discrete math, HCI, operating systems, and programming fundamentals; include examples, demos, and exercises

--- a/computer science related/databases/databases.ipynb
+++ b/computer science related/databases/databases.ipynb
@@ -12,6 +12,51 @@
     "\n",
     "# TODO: add sample schema, queries, and index/EXPLAIN demos"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d44c74c9",
+   "metadata": {},
+   "source": [
+    "## SQLite Mini Demo\n",
+    "- Create a table, insert rows, index a column, and compare query plans."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3265b692",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sqlite3\n",
+    "\n",
+    "conn = sqlite3.connect(\":memory:\")\n",
+    "cur = conn.cursor()\n",
+    "cur.executescript(\n",
+    "    \"\"\"\n",
+    "    CREATE TABLE user(id INTEGER PRIMARY KEY, name TEXT, city TEXT);\n",
+    "    INSERT INTO user(name, city) VALUES ('ada', 'london'), ('grace', 'baltimore');\n",
+    "    CREATE INDEX idx_user_city ON user(city);\n",
+    "    \"\"\"\n",
+    ")\n",
+    "\n",
+    "cur.execute(\"SELECT * FROM user WHERE city=?\", (\"london\",))\n",
+    "rows = cur.fetchall()\n",
+    "\n",
+    "plan = list(cur.execute(\"EXPLAIN QUERY PLAN SELECT * FROM user WHERE city='london'\"))\n",
+    "rows, plan[:2]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a06e40a",
+   "metadata": {},
+   "source": [
+    "Notes:\n",
+    "- Use indexes on selective columns; check `EXPLAIN QUERY PLAN` to verify index use.\n",
+    "- Keep transactions short; prefer parameterized queries to avoid injection."
+   ]
   }
  ],
  "metadata": {
