--- a/computer science related/discrete math and logic/discrete_math_logic.ipynb
+++ b/computer science related/discrete math and logic/discrete_math_logic.ipynb
@@ -12,6 +12,52 @@
     "\n",
     "# TODO: add set operations, truth-table generator, and simple graph demo"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b3ba4d1",
+   "metadata": {},
+   "source": [
+    "## Logic and Truth Tables\n",
+    "- Propositional logic: build truth tables to reason about implications.\n",
+    "- Use them to validate guards, invariants, and input constraints."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49f60108",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from itertools import product\n",
+    "\n",
+    "def truth_table(expr):\n",
+    "    rows = []\n",
+    "    for p, q in product([False, True], repeat=2):\n",
+    "        rows.append({\"p\": p, \"q\": q, \"expr\": expr(p, q)})\n",
+    "    return rows\n",
+    "\n",
+    "truth_table(lambda p, q: (not p) or q)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a8f9dba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A = {1, 2, 3}\n",
+    "B = {3, 4}\n",
+    "\n",
+    "{\n",
+    "    \"union\": A | B,\n",
+    "    \"intersection\": A & B,\n",
+    "    \"difference\": A - B,\n",
+    "    \"symmetric_difference\": A ^ B,\n",
+    "}"
+   ]
   }
  ],
  "metadata": {
