--- a/computer science related/operating systems/operating_systems.ipynb
+++ b/computer science related/operating systems/operating_systems.ipynb
@@ -12,6 +12,56 @@
     "\n",
     "# TODO: add demos for threads, locks, and simple mmap usage"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e998c5f7",
+   "metadata": {},
+   "source": [
+    "## Threads, Locks, and Scheduling\n",
+    "- Threads share memory; use locks to guard shared state.\n",
+    "- Use `time.sleep` to simulate work and observe interleaving."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe5a3410",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import mmap, tempfile, os\n",
+    "\n",
+    "with tempfile.TemporaryFile() as f:\n",
+    "    f.write(b\"hello os mmap demo\")\n",
+    "    f.flush()\n",
+    "    f.seek(0)\n",
+    "    with mmap.mmap(f.fileno(), length=0, access=mmap.ACCESS_READ) as mm:\n",
+    "        snippet = mm[:5]\n",
+    "snippet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d3baa85",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import threading, time\n",
+    "\n",
+    "def increment(counter, lock, rounds=50_000):\n",
+    "    for _ in range(rounds):\n",
+    "        with lock:\n",
+    "            counter[0] += 1\n",
+    "\n",
+    "counter = [0]\n",
+    "lock = threading.Lock()\n",
+    "threads = [threading.Thread(target=increment, args=(counter, lock)) for _ in range(4)]\n",
+    "for t in threads: t.start()\n",
+    "for t in threads: t.join()\n",
+    "counter[0]"
+   ]
   }
  ],
  "metadata": {
