--- a/computer science related/programming fundamentals/programming_fundamentals.ipynb
+++ b/computer science related/programming fundamentals/programming_fundamentals.ipynb
@@ -13,6 +13,57 @@
     "\n",
     "# TODO: add small exercises for functions, classes, and debugging"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c13bf59e",
+   "metadata": {},
+   "source": [
+    "## Control Flow and Functions\n",
+    "- Conditionals and loops shape program flow.\n",
+    "- Small, pure functions are easiest to test and reuse."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "850deb3e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fizzbuzz(n: int) -> list[str]:\n",
+    "    out = []\n",
+    "    for i in range(1, n + 1):\n",
+    "        if i % 15 == 0: out.append(\"fizzbuzz\")\n",
+    "        elif i % 3 == 0: out.append(\"fizz\")\n",
+    "        elif i % 5 == 0: out.append(\"buzz\")\n",
+    "        else: out.append(str(i))\n",
+    "    return out\n",
+    "\n",
+    "fizzbuzz(15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "813908bc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dataclasses import dataclass\n",
+    "import math\n",
+    "\n",
+    "@dataclass\n",
+    "class Point:\n",
+    "    x: float\n",
+    "    y: float\n",
+    "\n",
+    "    def mag(self) -> float:\n",
+    "        return math.hypot(self.x, self.y)\n",
+    "\n",
+    "p = Point(3, 4)\n",
+    "p.mag()  # 5.0"
+   ]
   }
  ],
  "metadata": {
