--- a/computer science related/cybersecurity fundamentals/cybersecurity_fundamentals.ipynb
+++ b/computer science related/cybersecurity fundamentals/cybersecurity_fundamentals.ipynb
@@ -12,6 +12,47 @@
     "\n",
     "# TODO: add demos for hashing, HMAC, and simple token validation"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aeac8636",
+   "metadata": {},
+   "source": [
+    "## Hashing and HMAC\n",
+    "- Hashes ensure integrity; HMACs ensure integrity plus authenticity with a secret key.\n",
+    "- Always compare digests with constant-time checks."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23af9db6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import hashlib, hmac, secrets\n",
+    "\n",
+    "message = b\"important message\"\n",
+    "key = secrets.token_bytes(32)\n",
+    "\n",
+    "digest = hashlib.sha256(message).hexdigest()\n",
+    "mac = hmac.new(key, message, hashlib.sha256).hexdigest()\n",
+    "\n",
+    "hmac.compare_digest(mac, hmac.new(key, message, hashlib.sha256).hexdigest())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f2bcbafe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "password = b\"s3cret\"\n",
+    "salt = secrets.token_bytes(16)\n",
+    "dk = hashlib.pbkdf2_hmac(\"sha256\", password, salt, iterations := 100_000, dklen=32)\n",
+    "len(dk), iterations"
+   ]
   }
  ],
  "metadata": {
