Enhance Jupyter notebooks with additional content for cybersecurity, databases, discrete math, HCI, operating systems, and programming fundamentals; include examples, demos, and exercises.

--- a/computer science related/cybersecurity fundamentals/cybersecurity_fundamentals.ipynb
+++ b/computer science related/cybersecurity fundamentals/cybersecurity_fundamentals.ipynb
@@ -53,6 +53,78 @@
     "dk = hashlib.pbkdf2_hmac(\"sha256\", password, salt, iterations := 100_000, dklen=32)\n",
     "len(dk), iterations"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0057a8bd",
+   "metadata": {},
+   "source": [
+    "## Auth vs AuthZ, Inputs, and Secrets\n",
+    "- Authentication proves identity; authorization checks permissions.\n",
+    "- Validate/encode inputs (e.g., parameterized SQL, escaping) to avoid injection.\n",
+    "- Use strong randomness for tokens; never roll your own crypto."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9a4db5f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def hash_password(password: bytes, salt: bytes | None = None, iterations: int = 120_000):\n",
+    "    salt = salt or secrets.token_bytes(16)\n",
+    "    dk = hashlib.pbkdf2_hmac(\"sha256\", password, salt, iterations, dklen=32)\n",
+    "    return {\"salt\": salt, \"iterations\": iterations, \"dk\": dk}\n",
+    "\n",
+    "def verify_password(password: bytes, record: dict):\n",
+    "    candidate = hashlib.pbkdf2_hmac(\"sha256\", password, record[\"salt\"], record[\"iterations\"], dklen=32)\n",
+    "    return hmac.compare_digest(candidate, record[\"dk\"])\n",
+    "\n",
+    "record = hash_password(b\"p@ssw0rd\")\n",
+    "verify_password(b\"p@ssw0rd\", record), verify_password(b\"wrong\", record)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "872b17b0",
+   "metadata": {},
+   "source": [
+    "## Broader Security Notes\n",
+    "- CIA triad: confidentiality, integrity, availability; design controls per axis.\n",
+    "- Common pitfalls: injection, broken auth/session, XSS/CSRF, insecure deserialization, sensitive data exposure.\n",
+    "- Secrets management: prefer env/secret stores, short-lived tokens, key rotation; avoid hard-coding secrets."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e573dfb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Simple signed token with HMAC\n",
+    "import base64, json, hmac, hashlib, secrets\n",
+    "\n",
+    "SECRET = secrets.token_bytes(32)\n",
+    "\n",
+    "def make_token(payload: dict) -> str:\n",
+    "    body = json.dumps(payload, separators=(\",\", \":\"), sort_keys=True).encode()\n",
+    "    sig = hmac.new(SECRET, body, hashlib.sha256).digest()\n",
+    "    return base64.urlsafe_b64encode(body + b\".\" + sig).decode()\n",
+    "\n",
+    "def verify_token(token: str) -> dict | None:\n",
+    "    raw = base64.urlsafe_b64decode(token.encode())\n",
+    "    body, sig = raw.rsplit(b\".\", 1)\n",
+    "    expected = hmac.new(SECRET, body, hashlib.sha256).digest()\n",
+    "    if not hmac.compare_digest(expected, sig):\n",
+    "        return None\n",
+    "    return json.loads(body)\n",
+    "\n",
+    "sample = {\"sub\": \"user123\", \"exp\": 9999999999}\n",
+    "tok = make_token(sample)\n",
+    "verify_token(tok)"
+   ]
   }
  ],
  "metadata": {
