--- a/computer science related/databases/databases.ipynb
+++ b/computer science related/databases/databases.ipynb
@@ -57,6 +57,94 @@
     "- Use indexes on selective columns; check `EXPLAIN QUERY PLAN` to verify index use.\n",
     "- Keep transactions short; prefer parameterized queries to avoid injection."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "141e48b2",
+   "metadata": {},
+   "source": [
+    "## Transactions and Constraints\n",
+    "- Use transactions to keep multi-step writes atomic; roll back on failure.\n",
+    "- Constraints (NOT NULL, UNIQUE, FK) protect integrity even when app code errs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2cad1cf9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sqlite3\n",
+    "\n",
+    "conn = sqlite3.connect(\":memory:\")\n",
+    "cur = conn.cursor()\n",
+    "cur.executescript(\"\"\"\n",
+    "CREATE TABLE account(id INTEGER PRIMARY KEY, email TEXT UNIQUE NOT NULL);\n",
+    "INSERT INTO account(email) VALUES ('a@example.com');\n",
+    "\"\"\")\n",
+    "\n",
+    "try:\n",
+    "    cur.execute(\"INSERT INTO account(email) VALUES (?)\", (\"a@example.com\",))\n",
+    "    conn.commit()\n",
+    "except sqlite3.IntegrityError as exc:\n",
+    "    conn.rollback()\n",
+    "    dup_error = str(exc)\n",
+    "\n",
+    "cur.execute(\"SELECT id, email FROM account\")\n",
+    "rows = cur.fetchall()\n",
+    "dup_error, rows"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "117b27c5",
+   "metadata": {},
+   "source": [
+    "## CRUD Essentials\n",
+    "- Create: define schemas/tables with types, constraints, defaults. In SQL, `CREATE TABLE` and `ALTER TABLE` evolve structure safely.\n",
+    "- Read: select only needed columns/rows; use indexes for predicates/sorts; measure with `EXPLAIN`.\n",
+    "- Update: scoped updates with predicates; beware write amplification and locks; keep transactions short.\n",
+    "- Delete: prefer soft-delete or archival tables for audit; `DELETE` vs `TRUNCATE` vs `DROP` have very different effects.\n",
+    "\n",
+    "## Relational vs Non-Relational\n",
+    "- Relational: strong schemas, joins, ACID guarantees; great for consistency, reporting, and ad-hoc queries.\n",
+    "- Document/Key-Value: flexible schemas, denormalized aggregates; simpler horizontal scaling, but you handle consistency at app level.\n",
+    "- Columnar: optimized for analytics scans and aggregations (OLAP).\n",
+    "- Graph: optimized for traversals and relationship queries.\n",
+    "\n",
+    "Guidance: start relational by default; move specific workloads (analytics → columnar; high fan-out aggregates → doc/kv; deep traversals → graph). Keep invariants close to where data is written (constraints, triggers, or validated write paths)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "595d63ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# CRUD walkthrough in SQLite\n",
+    "import sqlite3\n",
+    "conn = sqlite3.connect(\":memory:\")\n",
+    "cur = conn.cursor()\n",
+    "cur.execute(\"CREATE TABLE item(id INTEGER PRIMARY KEY, name TEXT, qty INTEGER)\")\n",
+    "\n",
+    "# Create/Insert\n",
+    "cur.executemany(\"INSERT INTO item(name, qty) VALUES (?, ?)\", [(\"apple\", 3), (\"banana\", 5)])\n",
+    "\n",
+    "# Read\n",
+    "cur.execute(\"SELECT name, qty FROM item ORDER BY name\")\n",
+    "rows_before = cur.fetchall()\n",
+    "\n",
+    "# Update\n",
+    "cur.execute(\"UPDATE item SET qty = qty + 1 WHERE name = ?\", (\"apple\",))\n",
+    "\n",
+    "# Delete\n",
+    "cur.execute(\"DELETE FROM item WHERE name = ?\", (\"banana\",))\n",
+    "cur.execute(\"SELECT name, qty FROM item ORDER BY name\")\n",
+    "rows_after = cur.fetchall()\n",
+    "rows_before, rows_after"
+   ]
   }
  ],
  "metadata": {
