--- a/computer science related/discrete math and logic/discrete_math_logic.ipynb
+++ b/computer science related/discrete math and logic/discrete_math_logic.ipynb
@@ -58,6 +58,83 @@
     "    \"symmetric_difference\": A ^ B,\n",
     "}"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a1586e83",
+   "metadata": {},
+   "source": [
+    "## Proof Patterns (sketch)\n",
+    "- Direct proof: assume premises, derive conclusion stepwise.\n",
+    "- Contradiction: assume negation, derive impossibility.\n",
+    "- Induction: prove base, then inductive step for n→n+1.\n",
+    "Use these to justify invariants in algorithms (loop invariants act like small inductive proofs)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ca03ca59",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from itertools import product\n",
+    "\n",
+    "def de_morgan_holds():\n",
+    "    rows = []\n",
+    "    for p, q in product([False, True], repeat=2):\n",
+    "        left = not (p or q)\n",
+    "        right = (not p) and (not q)\n",
+    "        rows.append({\"p\": p, \"q\": q, \"left\": left, \"right\": right, \"equal\": left == right})\n",
+    "    return rows\n",
+    "\n",
+    "de_morgan_holds()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "89e4373a",
+   "metadata": {},
+   "source": [
+    "## Where This Meets CS Practice\n",
+    "- Complexity analysis lives in discrete math (growth rates, recurrences, limits).\n",
+    "- Graph theory underpins routing, dependency analysis, and recommendation systems.\n",
+    "- Lattices/posets show up in type systems and access-control models; sets/relations map to schemas and joins."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df923f5b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Small graph and BFS traversal\n",
+    "from collections import deque\n",
+    "\n",
+    "graph = {\n",
+    "    \"A\": [\"B\", \"C\"],\n",
+    "    \"B\": [\"D\"],\n",
+    "    \"C\": [\"D\", \"E\"],\n",
+    "    \"D\": [],\n",
+    "    \"E\": [],\n",
+    "}\n",
+    "\n",
+    "def bfs(start):\n",
+    "    seen = {start}\n",
+    "    q = deque([start])\n",
+    "    order = []\n",
+    "    while q:\n",
+    "        node = q.popleft()\n",
+    "        order.append(node)\n",
+    "        for nbr in graph[node]:\n",
+    "            if nbr not in seen:\n",
+    "                seen.add(nbr)\n",
+    "                q.append(nbr)\n",
+    "    return order\n",
+    "\n",
+    "bfs(\"A\")"
+   ]
   }
  ],
  "metadata": {
