--- a/computer science related/operating systems/operating_systems.ipynb
+++ b/computer science related/operating systems/operating_systems.ipynb
@@ -62,6 +62,73 @@
     "for t in threads: t.join()\n",
     "counter[0]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f00a8f17",
+   "metadata": {},
+   "source": [
+    "## Processes vs Threads (quick note)\n",
+    "- Threads share memory (need locks); processes isolate memory (safer, more overhead).\n",
+    "- For CPU-bound work, processes avoid the GIL; for I/O-bound, threads/async are fine."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d3050ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import concurrent.futures, math, time\n",
+    "\n",
+    "def cpu_task(n=500_000):\n",
+    "    return sum(i*i for i in range(n))\n",
+    "\n",
+    "def bench(pool_cls, workers=4):\n",
+    "    t0 = time.perf_counter()\n",
+    "    with pool_cls(max_workers=workers) as pool:\n",
+    "        list(pool.map(cpu_task, [200_000]*workers))\n",
+    "    return round(time.perf_counter() - t0, 3)\n",
+    "\n",
+    "{\n",
+    "    \"threads\": bench(concurrent.futures.ThreadPoolExecutor),\n",
+    "    \"processes\": bench(concurrent.futures.ProcessPoolExecutor),\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7fa3662c",
+   "metadata": {},
+   "source": [
+    "## Scheduling and I/O Notes\n",
+    "- Preemptive schedulers time-slice threads; `sleep` yields voluntarily.\n",
+    "- CPU-bound work benefits from fewer runnable threads; I/O-bound can multiplex many.\n",
+    "- Disk/network I/O: use buffers; `fsync`/`flush` when durability matters; async I/O to avoid blocking."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "754bb62f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Buffered vs flushed file write demo\n",
+    "import os, tempfile, time\n",
+    "\n",
+    "data = b\"x\" * 1024\n",
+    "with tempfile.NamedTemporaryFile(delete=False) as f:\n",
+    "    path = f.name\n",
+    "    f.write(data)\n",
+    "    f.flush()  # buffered flush\n",
+    "    os.fsync(f.fileno())  # force to disk\n",
+    "\n",
+    "size = os.path.getsize(path)\n",
+    "os.remove(path)\n",
+    "size"
+   ]
   }
  ],
  "metadata": {
