--- a/computer science related/programming fundamentals/programming_fundamentals.ipynb
+++ b/computer science related/programming fundamentals/programming_fundamentals.ipynb
@@ -64,6 +64,45 @@
     "p = Point(3, 4)\n",
     "p.mag()  # 5.0"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "49352b32",
+   "metadata": {},
+   "source": [
+    "## Testing and Debugging Notes\n",
+    "- Prefer small pure functions; assert on inputs/outputs.\n",
+    "- Use `try/except` narrowly; log and re-raise for unexpected cases.\n",
+    "- Write a quick self-check harness inside the notebook before formal tests."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5097eb8b",
+   "metadata": {},
+   "source": [
+    "## Modularity and State\n",
+    "- Prefer functions that take data in and return data out; minimize hidden state.\n",
+    "- Group related behavior via small classes or modules; avoid “god objects.”\n",
+    "- Add type hints and docstrings to document contracts and enable tooling."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67ea105f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add_tax(amount: float, rate: float = 0.1) -> float:\n",
+    "    \"\"\"Pure function: returns amount with tax.\"\"\"\n",
+    "    return round(amount * (1 + rate), 2)\n",
+    "\n",
+    "# Quick self-checks\n",
+    "assert add_tax(100, 0.05) == 105.0\n",
+    "assert add_tax(19.99, 0.1) == 21.99\n",
+    "add_tax(42, 0.2)"
+   ]
   }
  ],
  "metadata": {
